--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "angular": "1.5.5",
+    "angular-click-outside": "1.1.1",
     "angular-route": "1.5.5",
     "angular-ui-bootstrap": "1.3.2",
     "babelify": "7.2.0",
@@ -14,7 +15,6 @@
     "grunt": "1.0.1",
     "grunt-browserify": "5.0.0",
     "grunt-cli": "1.2.0",
-    "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-less": "1.3.0",
     "http-server": "^0.6.1",
     "less": "2.6.1"
