--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "grunt-cli": "1.2.0",
     "grunt-contrib-less": "1.3.0",
     "http-server": "^0.6.1",
-    "less": "2.6.1"
+    "less": "2.6.1",
+    "stringify": "5.1.0"
   },
   "scripts": {
     "prestart": "npm install",
